# ros_astra_camera

./: CMakeLists.txt  package.xml
include/astra_camera/: astra_device.h  astra_driver.h
include/libuvc_camera/: camera_driver.h
ros/: astra_camera_node.cpp
src/: astra_device_manager.cpp  astra_driver.cpp  astra_frame_listener.cpp
src/libuvc_camera/: camera_driver.cpp  main.cpp
