<?xml version="1.0"?>
<package format="3">
  <name>astra_camera</name>
  <version>0.3.0</version>
  <description>Drivers for Orbbec Astra Devices. </description>
  <author email="liuhua@orbbec.com">Tim Liu</author>
  <license>Apache License 2.0</license>
  <maintainer email="nan@orbbec3d.com">Orbbec3D</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>

  <depend>camera_info_manager</depend>
  <depend>libudev-dev</depend>
  <depend>libusb-1.0-dev</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>libuvc</depend>

  <!-- generate msg/srv -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
