<?xml version="1.0"?>
<package format="3">
  <name>astra_camera</name>
  <version>0.3.0</version>
  <description>Drivers for Orbbec Astra Devices. </description>
  <author email="liuhua@orbbec.com">Tim Liu</author>
  <license>Apache License 2.0</license>
  <maintainer email="nan@orbbec3d.com">Orbbec3D</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rcutils</build_depend>
  
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rcutils</exec_depend>

  <depend>ament_index_cpp</depend>
  <depend>camera_info_manager</depend>
  <depend>libudev-dev</depend>
  <depend>libusb-1.0-dev</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>libuvc</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- generate msg/srv -->
  <build_depend>builtin_interfaces</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
